# release-owner-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/release_owner_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_release_owner_check.py
